app/assets/stylesheets/components/_button.scss
.mn-btn {
  color: white;
  width: 250px;
  padding: 10px;
  font-size: 22px;
  border-radius: 26px;
  transition: background-color .2s ease;
  border: none;
}

.mn-btn-primary {
  background-color: $orange;

  &:hover {
    background-color: #f9966d;
    text-decoration: none;
    color: white;
  }
}

.mn-btn-circle{
  height: 100px;
  width: 100px;
  box-shadow: 0px 11px 14px rgba(0, 0, 0, 0.237602), 0px 0px 14px rgba(0, 0, 0, 0.12);
  border-radius: 50%;
  font-size: 61px;
  color: white;
  background: linear-gradient(208.57deg, #FD8281 14.54%, #FE8451 90.24%);
}

.botom-right-corner{
  position: fixed;
  top: 971.1px;
  left: 469.6px;
}

.mn-btn-secondary {
  background-color: $pink;

  &:hover {
    background-color: #f79292;
    text-decoration: none;
    color: white;
  }
}

